--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,1 +1,170 @@
-hello
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Document</title>
+    <link rel="stylesheet" href="plugins/css/bootstrap.min.css">
+    <style>
+      body{
+        padding-top: 70px;
+
+      }
+      .starter{
+        padding: 40px 15px;
+        text-align:center;
+      }
+      .row{
+        margin-bottom: 20px;
+        display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    flex-wrap: wrap;
+      }
+
+      .row .row{
+        margin-top:10px;
+        margin-bottom: 0px;
+      }
+      [class*="col-"]{
+        padding-top: 15px;
+        padding-bottom: 15px;
+        background-color: #eee;
+        background-color:rgba(145, 146, 153, 0.5);
+        border:1px solid #ddd;
+        border:1px solid rgba(75, 74, 74, 0.2);
+      }
+    </style>
+</head>
+<body>
+
+  <!--1.以下是导航栏-->
+      <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+       
+          <div calss="row">
+            <ul class="nav navbar-nav" ><li ><a href="#">广西专业技术人员（职称）管理服务平台<small>（广西人才市场）</small></a></li></ul>
+               
+         
+       </div>
+         <div id="navbar" class="collapse-default navbar-collapse" >
+            <ul class="nav navbar-nav" > 
+              <li  ><a href="#">首页</a></li>
+              <li  ><a href="#">个人资料</a></li>
+              <li  ><a href="#">申报职称</a></li>
+              <li class="active"><a href="#">职称评审</a></li>
+              <li  ><a href="./zhichengrending.html">职称认定</a></li>
+              <li><a href="#">帮助中心</a></li>
+            </ul>
+          </div>
+      </nav>
+    <!--1.以上是导航栏-->
+
+
+      
+        
+      
+<!--以下是填报说明-->
+<div class="row">
+  <div class="col-md-12 ">
+    <h4><font color="#000000">职称评审</font></h4>
+  <div class="row">
+    <div class="col-md-1 "><img src="./img/ear.png" style="width:100%;height:auto; align-items:middle" /></div>
+          <div class="col-md-9 "><header><h3><strong><font color="#00008B">填报说明</font></strong></h3></header>
+
+             <h5><font color="#00008B">欢迎您参加广西壮族自治区专业技术资格的申报，为使您更为准确的掌握申报评审的相关政策，
+               减少因政策原因导致的申报障碍，敬请认真阅读并掌握评审相关的政策规定。主要包括以下政策：</font></h5>
+               <h5><font color="#00008B">1.国家、自治区职称管理方面的政策文件；</font></h5>
+                <h5><font color="#00008B">2.关于专业技术资格评审的一般程序规定及要求；</font></h5>
+                  <h5><font color="#00008B">3.个人所选择申报系列的专业技术资格评审条件；</font></h5>
+                    <h5><font color="#00008B">4.相关专项职称评审政策；</font></h5>
+                      <h5><font color="#00008B"> 5.当年度的自治区评审部署文件及所选择申报系列的评审部署文件；</font></h5>
+                        <h5><font color="#00008B">6.其他根据个人情况需要掌握的职称政策；</font></h5>
+                          <h5><font color="#00008B">以上政策均可在广西壮族自治区人力资源和社会保障厅网站上“年度职称评审工作专题”查询到；
+                            如网站查询不到或对政策文件把握不准，您也可根据我们在该网站提供的联系方式选择到您申报的评委会咨询了解。</font></h5> 
+            </div>
+  </div>
+</div>
+</div>
+<!--以上是填报说明-->
+
+
+<!--以下是申报按钮-->
+<div class="container" >
+<div class="row">
+  <h3  style="float:right"><strong>&nbsp&nbsp&nbsp&nbsp&nbsp我要申报：</strong></h3>
+  <button  style="float:right" type="button" class="btn btn-success" 
+  onclick="window.location.href = './pingshen_input.html'" >+点我进行申报 </button>
+ 
+ 
+</div>
+</div>
+ <!--以上是申报按钮-->
+
+
+
+
+
+ <!--以下是职称评审item-->
+      <div class="row">
+        <div class="col-sm-9 col-md-offset-1">
+          #1职称评审
+          <button type="button" class="btn btn-primary"
+           onclick="window.location.href = './detail.html'">详情 </button> 
+          <button type="button" class="btn btn-danger" >推荐表</button>  
+          <button type="button" class="btn btn-danger" >评审表</button>
+          <lable>&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp</lable> 
+          
+          <code ><lable   >当前状态：</lable></code>
+          
+          <span class="label label-success"><lable>Success</lable></span>
+          
+               <div class="row">
+                       <div class="col-sm-3 ">
+                        申报年度
+                       </div>
+                        <div class="col-sm-3" style="background-color: rgb(247, 248, 248);">
+                          2020
+                         </div>
+                         <div class="col-sm-3">
+                          评委会所属职改办
+                         </div>
+                         <div class="col-sm-3" style="background-color: rgb(247, 248, 248);">
+                          桂林电子科技大学职称改革工作领导小组办公室
+                         </div>
+
+                         <div class="col-sm-3 ">
+                          拟申报资格名称
+                         </div>
+                          <div class="col-sm-3" style="background-color: rgb(247, 248, 248);">
+                            艺术系列/副高级/二级作曲
+                           </div>
+                           <div class="col-sm-3">
+                            评审会名称
+                           </div>
+                           <div class="col-sm-3" style="background-color: rgb(247, 248, 248);">
+                            桂林电子科技大学引进高层次急需紧缺人才直接评审高级职称委员会
+                           </div>
+
+                           <div class="col-sm-3 ">
+                            评审等级
+                           </div>
+                            <div class="col-sm-3" style="background-color: rgb(247, 248, 248);">
+                              副高级
+                             </div>
+                             <div class="col-sm-3">
+                              创建时间
+                             </div>
+                             <div class="col-sm-3" style="background-color: rgb(247, 248, 248);">
+                              2020-11-15
+                             </div>
+                </div>
+        </div>
+      </div>
+    
+<!--以上是职称评审item-->
+
+
+
+</body>
+</html>
