--- a/src/main/resources/templates/company_shenhe.html
+++ b/src/main/resources/templates/company_shenhe.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <base th:href="@{/}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="plugins/css/bootstrap.min.css">
