--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <base th:href="@{/}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="plugins/css/bootstrap.min.css">
@@ -49,18 +51,18 @@
        
           <div calss="row">
             <ul class="nav navbar-nav" ><li ><a href="#">广西专业技术人员（职称）管理服务平台<small>（广西人才市场）</small></a></li></ul>
-               
-         
+
+
        </div>
-         <div id="navbar" class="collapse-default navbar-collapse" >
-            <ul class="nav navbar-nav" > 
-              <li  ><a href="#">首页</a></li>
-              <li  ><a href="#">个人资料</a></li>
-              <li  ><a href="#">申报职称</a></li>
-              <li class="active"><a href="./index.html">职称评审</a></li>
-              <li  ><a href="./zhichengrending.html">职称认定</a></li>
-              <li><a href="#">帮助中心</a></li>
-            </ul>
+          <div id="navbar" class="collapse-default navbar-collapse" >
+              <ul class="nav navbar-nav" >
+                  <li  ><a th="#">首页</a></li>
+                  <li  ><a th:href="@{'/PersonalUserInfo/toPersonalInfo'}">个人资料</a></li>
+                  <li  ><a th:href="@{'/PersonalDeclare/Main'}">申报职称</a></li>
+                  <li class="active"><a th:href="@{'/PersonalDeclare/Declare'}">职称评审</a></li>
+                  <li  ><a th:href="@{'/PersonalJudge/Judge'}">职称认定</a></li>
+                  <li><a href="#">帮助中心</a></li>
+              </ul>
           </div>
       </nav>
     <!--1.以上是导航栏-->
