--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
 <html lang="en">
+<html xmlns:th="http://www.thymeleaf.org">
 <head>
     <meta charset="UTF-8">
+    <base th:href="@{/}">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="plugins/css/bootstrap.min.css">
@@ -48,12 +50,12 @@
          
        </div>
          <div id="navbar" class="collapse-default navbar-collapse" >
-            <ul class="nav navbar-nav" > 
-              <li  ><a href="#">首页</a></li>
-              <li  ><a href="#">个人资料</a></li>
-              <li  ><a href="#">申报职称</a></li>
-              <li class="active"><a href="#">职称评审</a></li>
-              <li  ><a href="./zhichengrending.html">职称认定</a></li>
+            <ul class="nav navbar-nav" >
+              <li  ><a th="#">首页</a></li>
+              <li  ><a th:href="@{'/PersonalUserInfo/toPersonalInfo'}">个人资料</a></li>
+              <li  ><a th:href="@{'/PersonalDeclare/Main'}">申报职称</a></li>
+              <li class="active"><a th:href="@{'/PersonalDeclare/Declare'}">职称评审</a></li>
+              <li  ><a th:href="@{'/PersonalJudge/Judge'}">职称认定</a></li>
               <li><a href="#">帮助中心</a></li>
             </ul>
           </div>
@@ -71,17 +73,16 @@
   <div class="row">
     <div class="col-md-1 "><img src="./img/ear.png" style="width:100%;height:auto; align-items:middle" /></div>
           <div class="col-md-9 "><header><h3><strong><font color="#00008B">填报说明</font></strong></h3></header>
-
              <h5><font color="#00008B">欢迎您参加广西壮族自治区专业技术资格的申报，为使您更为准确的掌握申报评审的相关政策，
                减少因政策原因导致的申报障碍，敬请认真阅读并掌握评审相关的政策规定。主要包括以下政策：</font></h5>
-               <h5><font color="#00008B">1.国家、自治区职称管理方面的政策文件；</font></h5>
-                <h5><font color="#00008B">2.关于专业技术资格评审的一般程序规定及要求；</font></h5>
-                  <h5><font color="#00008B">3.个人所选择申报系列的专业技术资格评审条件；</font></h5>
-                    <h5><font color="#00008B">4.相关专项职称评审政策；</font></h5>
-                      <h5><font color="#00008B"> 5.当年度的自治区评审部署文件及所选择申报系列的评审部署文件；</font></h5>
-                        <h5><font color="#00008B">6.其他根据个人情况需要掌握的职称政策；</font></h5>
-                          <h5><font color="#00008B">以上政策均可在广西壮族自治区人力资源和社会保障厅网站上“年度职称评审工作专题”查询到；
-                            如网站查询不到或对政策文件把握不准，您也可根据我们在该网站提供的联系方式选择到您申报的评委会咨询了解。</font></h5> 
+              <h5><font color="#00008B">1.国家、自治区职称管理方面的政策文件；</font></h5>
+              <h5><font color="#00008B">2.关于专业技术资格评审的一般程序规定及要求；</font></h5>
+              <h5><font color="#00008B">3.个人所选择申报系列的专业技术资格评审条件；</font></h5>
+              <h5><font color="#00008B">4.相关专项职称评审政策；</font></h5>
+              <h5><font color="#00008B"> 5.当年度的自治区评审部署文件及所选择申报系列的评审部署文件；</font></h5>
+              <h5><font color="#00008B">6.其他根据个人情况需要掌握的职称政策；</font></h5>
+              <h5><font color="#00008B">以上政策均可在广西壮族自治区人力资源和社会保障厅网站上“年度职称评审工作专题”查询到；
+                  如网站查询不到或对政策文件把握不准，您也可根据我们在该网站提供的联系方式选择到您申报的评委会咨询了解。</font></h5>
             </div>
   </div>
 </div>
@@ -89,11 +90,12 @@
 <!--以上是填报说明-->
 
 
-<!--以下是申报按钮-->
+<!--以下是申报按钮(未完成)-->
 <div class="container" >
 <div class="row">
   <h3  style="float:right"><strong>&nbsp&nbsp&nbsp&nbsp&nbsp我要申报：</strong></h3>
-  <button  style="float:right" type="button" class="btn btn-success" 
+<!--    <a th:href="@{'/PersonalDeclare/toCreateDeclareTable'}" type="button" class="btn btn-success">+点我进行申报</a>-->
+  <button  style="float:right" type="button" class="btn btn-success"
   onclick="window.location.href = './pingshen_input.html'" >+点我进行申报 </button>
  
  
