--- a/src/main/resources/templates/pingshen_input.html
+++ b/src/main/resources/templates/pingshen_input.html
@@ -8,10 +8,11 @@
     <!-- Bootstrap CSS -->
        
        
-    <link rel="stylesheet" href="assets/vendor/bootstrap/css/bootstrap.min.css">
-    <link href="assets/vendor/fonts/circular-std/style.css" rel="stylesheet">
-    <link rel="stylesheet" href="assets/libs/css/style.css">
-    <link rel="stylesheet" href="assets/vendor/fonts/fontawesome/css/fontawesome-all.css">
+    <link rel="stylesheet" href="plugins/css/bootstrap.min.css">
+<script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
+    <script src="https://cdn.bootcss.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="https://cdn.bootcss.com/moment.js/2.24.0/moment-with-locales.js"></script>
+   <script src="https://cdn.bootcss.com/bootstrap-datetimepicker/4.17.47/js/bootstrap-datetimepicker.min.js"></script>
     <title></title>
 
 
@@ -66,24 +67,25 @@
 
 <body>
     <!--1.以下是导航栏-->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      
-      <a class="nav-item" href="#">广西专业技术人员（职称）管理服务平台<small>（广西人才市场）</small></a>
-      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-        <div class="navbar-nav">
-          <a class="nav-item nav-link " href="#">首页 </a>
-          <a class="nav-item nav-link" href="#">个人资料</a>
-          <a class="nav-item nav-link" href="#">申报职称</a>
-          <a class="nav-item nav-link active" href="./index.html">职称评审</a>
-          <a class="nav-item nav-link " href="./zhichengrending.html">职称认定<span class="sr-only">(current)</span></a>
-          <a class="nav-item nav-link disabled" href="#">帮助中心</a>
-        </div>
+    <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
+       
+      <div calss="row">
+        <ul class="nav navbar-nav" ><li ><a href="#">广西专业技术人员（职称）管理服务平台<small>（广西人才市场）</small></a></li></ul>
+           
+     
+   </div>
+     <div id="navbar" class="collapse-default navbar-collapse" >
+        <ul class="nav navbar-nav" > 
+          <li  ><a href="#">首页</a></li>
+          <li  ><a href="#">个人资料</a></li>
+          <li  ><a href="#">申报职称</a></li>
+          <li class="active"><a href="#">职称评审</a></li>
+          <li  ><a href="./zhichengrending.html">职称认定</a></li>
+          <li><a href="#">帮助中心</a></li>
+        </ul>
       </div>
-    </nav>
-  <!--1.以上是导航栏-->
+  </nav>
+<!--1.以上是导航栏-->
   
   
   
@@ -91,7 +93,7 @@
   
   <!--以下是个人承诺-->
   <div class="row">
-    <div class="col-md-9 offset-md-1" style="background-color: rgb(254, 254, 255);">
+    <div class="col-md-9 col-md-offset-1" style="background-color: rgb(254, 254, 255);">
   
      
   
@@ -137,7 +139,7 @@
   <!--以下是申报信息-->
   
   <div class="row">
-  <div class="col-md-9 offset-md-1" style="background-color: rgb(254, 254, 255);">
+  <div class="col-md-9 col-md-offset-1" style="background-color: rgb(254, 254, 255);">
   <div class="row" style=" background-color :#e4f0ff" >
   
   <h4><font color="#1a56a8"> <strong>申报信息</strong></font></h4>
@@ -163,7 +165,39 @@
             <h5><font color="#FF0033"> * </font>&nbsp参加工作时间</h5>
          </div>
          <div class="col-sm-6" style="background-color: #FFFFFF;">
-            <input  style="width: 400px; height:40px" type="text"/>
+
+
+          <div class="row">
+            
+            
+                    <div class="form-group" style="width: 450px; ">
+                        <!--指定 date标记-->
+            
+                        <div class='input-group date' id='datetimepicker1'>
+            
+                            <input type='text' class="form-control" />
+            
+                            <span class="input-group-addon">
+            
+                                <span class="glyphicon glyphicon-calendar"></span>
+            
+                            </span>
+            
+                        </div>
+            
+                    </div>
+            
+                
+        
+            </div>
+
+
+
+
+
+
+
+          
            </div>
 
            <div class="col-sm-6">
@@ -255,7 +289,7 @@
   <!--以下是基本信息-->
   
   <div class="row">
-  <div class="col-md-9 offset-md-1" style="background-color: rgb(254, 254, 255);">
+  <div class="col-md-9 col-md-offset-1" style="background-color: rgb(254, 254, 255);">
   <div class="row" style=" background-color :#e4f0ff" >
   
     <h4><font color="#1a56a8"> <strong>基本情况</strong></font></h4>
@@ -278,63 +312,63 @@
              <div class="col-sm-3" style="background-color: #FFFFFF;">
                 <select style="width: 200px; height:40px">
                     <option value="">请选择</option>
-                    <option value="汉">汉族</option>
-                    <option value="蒙古族">蒙古族</option>
-                    <option value="回族">回族</option>
-                    <option value="藏族">藏族</option>
-                    <option value="维吾尔族">维吾尔族</option>
-                    <option value="苗族">苗族</option>
-                    <option value="彝族">彝族</option>
-                    <option value="壮族">壮族</option>
-                    <option value="布依族">布依族</option>
-                    <option value="朝鲜族">朝鲜族</option>
-                    <option value="满族">满族</option>
-                    <option value="侗族">侗族</option>
-                    <option value="瑶族">瑶族</option>
-                    <option value="白族">白族</option>
-                    <option value="土家族">土家族</option>
-                    <option value="哈尼族">哈尼族</option>
-                    <option value="哈萨克族">哈萨克族</option>
-                    <option value="傣族">傣族</option>
-                    <option value="黎族">黎族</option>
-                    <option value="傈僳族">傈僳族</option>
-                    <option value="佤族">佤族</option>
-                    <option value="畲族">畲族</option>
-                    <option value="高山族">高山族</option>
-                    <option value="拉祜族">拉祜族</option>
-                    <option value="水族">水族</option>
-                    <option value="东乡族">东乡族</option>
-                    <option value="纳西族">纳西族</option>
-                    <option value="景颇族">景颇族</option>
-                    <option value="柯尔克孜族">柯尔克孜族</option>
-                    <option value="土族">土族</option>
-                    <option value="达斡尔族">达斡尔族</option>
-                    <option value="仫佬族">仫佬族</option>
-                    <option value="羌族">羌族</option>
-                    <option value="布朗族">布朗族</option>
-                    <option value="撒拉族">撒拉族</option>
-                    <option value="毛南族">毛南族</option>
-                    <option value="仡佬族">仡佬族</option>
-                    <option value="锡伯族">锡伯族</option>
-                    <option value="阿昌族">阿昌族</option>
-                    <option value="普米族">普米族</option>
-                    <option value="塔吉克族">塔吉克族</option>
-                    <option value="怒族">怒族</option>
-                    <option value="乌孜别克族">乌孜别克族</option>
-                    <option value="俄罗斯族">俄罗斯族</option>
-                    <option value="鄂温克族">鄂温克族</option>
-                    <option value="德昂族">德昂族</option>
-                    <option value="保安族">保安族</option>
-                    <option value="裕固族">裕固族</option>
-                    <option value="京族">京族</option>
-                    <option value="塔塔尔族">塔塔尔族</option>
-                    <option value="独龙族">独龙族</option>
-                    <option value="鄂伦春族">鄂伦春族</option>
-                    <option value="赫哲族">赫哲族</option>
-                    <option value="门巴族">门巴族</option>
-                    <option value="珞巴族">珞巴族</option>
-                    <option value="基诺族">基诺族</option>
-                </select>
+  <option value="汉">汉族</option>
+  <option value="蒙古族">蒙古族</option>
+  <option value="回族">回族</option>
+  <option value="藏族">藏族</option>
+  <option value="维吾尔族">维吾尔族</option>
+  <option value="苗族">苗族</option>
+  <option value="彝族">彝族</option>
+  <option value="壮族">壮族</option>
+  <option value="布依族">布依族</option>
+  <option value="朝鲜族">朝鲜族</option>
+  <option value="满族">满族</option>
+  <option value="侗族">侗族</option>
+  <option value="瑶族">瑶族</option>
+  <option value="白族">白族</option>
+  <option value="土家族">土家族</option>
+  <option value="哈尼族">哈尼族</option>
+  <option value="哈萨克族">哈萨克族</option>
+  <option value="傣族">傣族</option>
+  <option value="黎族">黎族</option>
+  <option value="傈僳族">傈僳族</option>
+  <option value="佤族">佤族</option>
+  <option value="畲族">畲族</option>
+  <option value="高山族">高山族</option>
+  <option value="拉祜族">拉祜族</option>
+  <option value="水族">水族</option>
+  <option value="东乡族">东乡族</option>
+  <option value="纳西族">纳西族</option>
+  <option value="景颇族">景颇族</option>
+  <option value="柯尔克孜族">柯尔克孜族</option>
+  <option value="土族">土族</option>
+  <option value="达斡尔族">达斡尔族</option>
+  <option value="仫佬族">仫佬族</option>
+  <option value="羌族">羌族</option>
+  <option value="布朗族">布朗族</option>
+  <option value="撒拉族">撒拉族</option>
+  <option value="毛南族">毛南族</option>
+  <option value="仡佬族">仡佬族</option>
+  <option value="锡伯族">锡伯族</option>
+  <option value="阿昌族">阿昌族</option>
+  <option value="普米族">普米族</option>
+  <option value="塔吉克族">塔吉克族</option>
+  <option value="怒族">怒族</option>
+  <option value="乌孜别克族">乌孜别克族</option>
+  <option value="俄罗斯族">俄罗斯族</option>
+  <option value="鄂温克族">鄂温克族</option>
+  <option value="德昂族">德昂族</option>
+  <option value="保安族">保安族</option>
+  <option value="裕固族">裕固族</option>
+  <option value="京族">京族</option>
+  <option value="塔塔尔族">塔塔尔族</option>
+  <option value="独龙族">独龙族</option>
+  <option value="鄂伦春族">鄂伦春族</option>
+  <option value="赫哲族">赫哲族</option>
+  <option value="门巴族">门巴族</option>
+  <option value="珞巴族">珞巴族</option>
+  <option value="基诺族">基诺族</option>
+                    </select>
              </div>
   
              <div class="col-sm-3 ">
@@ -359,7 +393,29 @@
                 <h5><font color="#FF0033"> * </font>&nbsp出生年月</h5>
                </div>
                 <div class="col-sm-3" style="background-color: #FFFFFF;">
-                    <input  style="width: 200px; height:40px;" type="text" />
+                  <div class="row">
+            
+            
+                    <div class="form-group" style="width: 200px; ">
+                        <!--指定 date标记-->
+            
+                        <div class='input-group date' id='datetimepicker2'>
+            
+                            <input type='text' class="form-control" />
+            
+                            <span class="input-group-addon">
+            
+                                <span class="glyphicon glyphicon-calendar"></span>
+            
+                            </span>
+            
+                        </div>
+            
+                    </div>
+            
+                
+        
+            </div>
                  </div>
                  <div class="col-sm-3">
                     <h5><font color="#FF0033"> * </font>&nbsp懂何种外国语言</h5>
@@ -430,7 +486,7 @@
   <!--以下是工作小结-->
   
   <div class="row">
-    <div class="col-md-9 offset-md-1" style="background-color: rgb(254, 254, 255);">
+    <div class="col-md-9 col-md-offset-1" style="background-color: rgb(254, 254, 255);">
     <div class="row" style=" background-color :#e4f0ff" >
     
       <h4><font color="#1a56a8"> <strong>见习期工作小结</strong></font></h4>
@@ -474,7 +530,7 @@
   <!--以下是学历信息-->
   
   <div class="row">
-  <div class="col-md-9 offset-md-1" style="background-color: rgb(254, 254, 255);">
+  <div class="col-md-9 col-md-offset-1" style="background-color: rgb(254, 254, 255);">
   <div class="row" style=" background-color :#e4f0ff" >
   
     <h4><font color="#1a56a8"> <strong>学历情况</strong></font></h4>
@@ -697,7 +753,7 @@
   <!--以下是工作情况-->
   
   <div class="row">
-  <div class="col-md-9 offset-md-1" style="background-color: rgb(254, 254, 255);">
+  <div class="col-md-9 col-md-offset-1" style="background-color: rgb(254, 254, 255);">
   <div class="row" style=" background-color :#e4f0ff" >
   
     <h4><font color="#1a56a8"> <strong>主要工作经历及成绩</strong></font></h4>
@@ -841,7 +897,7 @@
   <!--以下是else固定信息-->
   
   <div class="row">
-    <div class="col-md-9 offset-md-1" style="background-color: rgb(254, 254, 255);">
+    <div class="col-md-9 col-md-offset-1" style="background-color: rgb(254, 254, 255);">
     <div class="row" style=" background-color :#e4f0ff" >
     
       <h4><font color="#1a56a8"> <strong>论文著作</strong></font></h4>
@@ -908,32 +964,48 @@
 
   
   
-  
+    <script type="text/javascript">
+
+
+      $(function () {
       
-      <!-- ============================================================== -->
-      <!-- end main wrapper  -->
-      <!-- ============================================================== -->
-      <!-- Optional JavaScript -->
-      <!-- jquery 3.3.1 -->
-      <script src="assets/vendor/jquery/jquery-3.3.1.min.js"></script>
-      <!-- bootstap bundle js -->
-      <script src="assets/vendor/bootstrap/js/bootstrap.bundle.js"></script>
-      <!-- slimscroll js -->
-      <script src="assets/vendor/slimscroll/jquery.slimscroll.js"></script>
-      <!-- main js -->
-      <script src="assets/libs/js/main-js.js"></script>
-      <!-- chart chartist js -->
-      <script src="assets/vendor/charts/chartist-bundle/chartist.min.js"></script>
-      <!-- sparkline js -->
-      <script src="assets/vendor/charts/sparkline/jquery.sparkline.js"></script>
-      <!-- morris js -->
-      <script src="assets/vendor/charts/morris-bundle/raphael.min.js"></script>
-      <script src="assets/vendor/charts/morris-bundle/morris.js"></script>
-      <!-- chart c3 js -->
-      <script src="assets/vendor/charts/c3charts/c3.min.js"></script>
-      <script src="assets/vendor/charts/c3charts/d3-5.4.0.min.js"></script>
-      <script src="assets/vendor/charts/c3charts/C3chartjs.js"></script>
-      <script src="assets/libs/js/dashboard-ecommerce.js"></script>
+          $('#datetimepicker1').datetimepicker({
+      
+              format: 'YYYY-MM-DD',
+      
+              locale: moment.locale('zh-cn')
+      
+          });
+      
+          $('#datetimepicker2').datetimepicker({
+      
+              format: 'YYYY-MM-DD ',
+      
+              locale: moment.locale('zh-cn')
+      
+          });
+      
+      });
+      
+      
+      </script>
+      
+
+
+
+
+
+
+      
+      
+
+
+
+
+
+      
+      
+
   
   </body>
 </html>
