--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -94,9 +94,9 @@
 <div class="container" >
 <div class="row">
   <h3  style="float:right"><strong>&nbsp&nbsp&nbsp&nbsp&nbsp我要申报：</strong></h3>
-<!--    <a th:href="@{'/PersonalDeclare/toCreateDeclareTable'}" type="button" class="btn btn-success">+点我进行申报</a>-->
-  <button  style="float:right" type="button" class="btn btn-success"
-  onclick="window.location.href = './pingshen_input.html'" >+点我进行申报 </button>
+    <a th:href="@{'/PersonalDeclare/toCreateDeclareTable'}" type="button" class="btn btn-success">+点我进行申报</a>
+<!--  <button  style="float:right" type="button" class="btn btn-success"-->
+<!--  onclick="window.location.href = './pingshen_input.html'" >+点我进行申报 </button>-->
  
  
 </div>
