--- a/src/main/resources/templates/pingshen_input.html
+++ b/src/main/resources/templates/pingshen_input.html
@@ -66,6 +66,7 @@
 </head>
 
 <body>
+
     <!--1.以下是导航栏-->
     <nav class="navbar navbar-inverse navbar-fixed-top" role="navigation">
        
@@ -74,16 +75,16 @@
            
      
    </div>
-     <div id="navbar" class="collapse-default navbar-collapse" >
-        <ul class="nav navbar-nav" > 
-          <li  ><a href="#">首页</a></li>
-          <li  ><a href="#">个人资料</a></li>
-          <li  ><a href="#">申报职称</a></li>
-          <li class="active"><a href="#">职称评审</a></li>
-          <li  ><a href="./zhichengrending.html">职称认定</a></li>
-          <li><a href="#">帮助中心</a></li>
-        </ul>
-      </div>
+        <div id="navbar" class="collapse-default navbar-collapse" >
+            <ul class="nav navbar-nav" >
+                <li  ><a th="#">首页</a></li>
+                <li  ><a th:href="@{'/PersonalUserInfo/toPersonalInfo'}">个人资料</a></li>
+                <li  ><a th:href="@{'/PersonalDeclare/Main'}">申报职称</a></li>
+                <li class="active"><a th:href="@{'/PersonalDeclare/Declare'}">职称评审</a></li>
+                <li  ><a th:href="@{'/PersonalJudge/Judge'}">职称认定</a></li>
+                <li><a href="#">帮助中心</a></li>
+            </ul>
+        </div>
   </nav>
 <!--1.以上是导航栏-->
   
@@ -113,10 +114,10 @@
                       同意按照自治区有关文件及评审条件规定，自申报当年起，5年内不得申报。累计造假两次的，终身不得申报。
                     </font></h5>
                     <h5 align="right"><font color="#d9524e">
-                      本人已承诺：唐老师
+                        <label th:text="'本人已承诺：'+${session.PersonalLoginUser.getUserName()}">本人已承诺：魏腾飞</label>
                     </font></h5>
                     <h5 align="right"><font color="#d9524e">
-                      承诺日期：2020/1/1
+                      承诺日期：2020/1/12
                     </font></h5>
                    </div>
                    
@@ -134,7 +135,7 @@
   
   <!--以上是个人承诺-->
   
-  <form action="" method="post"  onsubmit="return false">
+  <form action="" method="post"  th:action="@{'/PersonalDeclare/CreateDeclareTable'}">
   
   <!--以下是申报信息-->
   
@@ -270,11 +271,6 @@
                 <option value="值">单位3</option>
                 </select>
          </div>
-         
-  
-  
-           
-  
     </div>
   </div>
   </div>
@@ -304,7 +300,7 @@
             <h5><font color="#FF0033"> * </font>&nbsp姓名</h5>
            </div>
             <div class="col-sm-3">
-                <input  style="width: 200px; height:40px ;background-color:#eef1f6 ;" type="text" value="唐小率" readonly/>
+                <input  style="width: 200px; height:40px ;background-color:#eef1f6 ;" type="text" th:value="${session.PersonalLoginUser.getUserName()}" readonly/>
              </div>
              <div class="col-sm-3">
                 <h5><font color="#FF0033"> * </font>&nbsp民族</h5>
@@ -312,70 +308,70 @@
              <div class="col-sm-3" style="background-color: #FFFFFF;">
                 <select style="width: 200px; height:40px">
                     <option value="">请选择</option>
-  <option value="汉">汉族</option>
-  <option value="蒙古族">蒙古族</option>
-  <option value="回族">回族</option>
-  <option value="藏族">藏族</option>
-  <option value="维吾尔族">维吾尔族</option>
-  <option value="苗族">苗族</option>
-  <option value="彝族">彝族</option>
-  <option value="壮族">壮族</option>
-  <option value="布依族">布依族</option>
-  <option value="朝鲜族">朝鲜族</option>
-  <option value="满族">满族</option>
-  <option value="侗族">侗族</option>
-  <option value="瑶族">瑶族</option>
-  <option value="白族">白族</option>
-  <option value="土家族">土家族</option>
-  <option value="哈尼族">哈尼族</option>
-  <option value="哈萨克族">哈萨克族</option>
-  <option value="傣族">傣族</option>
-  <option value="黎族">黎族</option>
-  <option value="傈僳族">傈僳族</option>
-  <option value="佤族">佤族</option>
-  <option value="畲族">畲族</option>
-  <option value="高山族">高山族</option>
-  <option value="拉祜族">拉祜族</option>
-  <option value="水族">水族</option>
-  <option value="东乡族">东乡族</option>
-  <option value="纳西族">纳西族</option>
-  <option value="景颇族">景颇族</option>
-  <option value="柯尔克孜族">柯尔克孜族</option>
-  <option value="土族">土族</option>
-  <option value="达斡尔族">达斡尔族</option>
-  <option value="仫佬族">仫佬族</option>
-  <option value="羌族">羌族</option>
-  <option value="布朗族">布朗族</option>
-  <option value="撒拉族">撒拉族</option>
-  <option value="毛南族">毛南族</option>
-  <option value="仡佬族">仡佬族</option>
-  <option value="锡伯族">锡伯族</option>
-  <option value="阿昌族">阿昌族</option>
-  <option value="普米族">普米族</option>
-  <option value="塔吉克族">塔吉克族</option>
-  <option value="怒族">怒族</option>
-  <option value="乌孜别克族">乌孜别克族</option>
-  <option value="俄罗斯族">俄罗斯族</option>
-  <option value="鄂温克族">鄂温克族</option>
-  <option value="德昂族">德昂族</option>
-  <option value="保安族">保安族</option>
-  <option value="裕固族">裕固族</option>
-  <option value="京族">京族</option>
-  <option value="塔塔尔族">塔塔尔族</option>
-  <option value="独龙族">独龙族</option>
-  <option value="鄂伦春族">鄂伦春族</option>
-  <option value="赫哲族">赫哲族</option>
-  <option value="门巴族">门巴族</option>
-  <option value="珞巴族">珞巴族</option>
-  <option value="基诺族">基诺族</option>
-                    </select>
+                    <option value="汉">汉族</option>
+                    <option value="蒙古族">蒙古族</option>
+                    <option value="回族">回族</option>
+                    <option value="藏族">藏族</option>
+                    <option value="维吾尔族">维吾尔族</option>
+                    <option value="苗族">苗族</option>
+                    <option value="彝族">彝族</option>
+                    <option value="壮族">壮族</option>
+                    <option value="布依族">布依族</option>
+                    <option value="朝鲜族">朝鲜族</option>
+                    <option value="满族">满族</option>
+                    <option value="侗族">侗族</option>
+                    <option value="瑶族">瑶族</option>
+                    <option value="白族">白族</option>
+                    <option value="土家族">土家族</option>
+                    <option value="哈尼族">哈尼族</option>
+                    <option value="哈萨克族">哈萨克族</option>
+                    <option value="傣族">傣族</option>
+                    <option value="黎族">黎族</option>
+                    <option value="傈僳族">傈僳族</option>
+                    <option value="佤族">佤族</option>
+                    <option value="畲族">畲族</option>
+                    <option value="高山族">高山族</option>
+                    <option value="拉祜族">拉祜族</option>
+                    <option value="水族">水族</option>
+                    <option value="东乡族">东乡族</option>
+                    <option value="纳西族">纳西族</option>
+                    <option value="景颇族">景颇族</option>
+                    <option value="柯尔克孜族">柯尔克孜族</option>
+                    <option value="土族">土族</option>
+                    <option value="达斡尔族">达斡尔族</option>
+                    <option value="仫佬族">仫佬族</option>
+                    <option value="羌族">羌族</option>
+                    <option value="布朗族">布朗族</option>
+                    <option value="撒拉族">撒拉族</option>
+                    <option value="毛南族">毛南族</option>
+                    <option value="仡佬族">仡佬族</option>
+                    <option value="锡伯族">锡伯族</option>
+                    <option value="阿昌族">阿昌族</option>
+                    <option value="普米族">普米族</option>
+                    <option value="塔吉克族">塔吉克族</option>
+                    <option value="怒族">怒族</option>
+                    <option value="乌孜别克族">乌孜别克族</option>
+                    <option value="俄罗斯族">俄罗斯族</option>
+                    <option value="鄂温克族">鄂温克族</option>
+                    <option value="德昂族">德昂族</option>
+                    <option value="保安族">保安族</option>
+                    <option value="裕固族">裕固族</option>
+                    <option value="京族">京族</option>
+                    <option value="塔塔尔族">塔塔尔族</option>
+                    <option value="独龙族">独龙族</option>
+                    <option value="鄂伦春族">鄂伦春族</option>
+                    <option value="赫哲族">赫哲族</option>
+                    <option value="门巴族">门巴族</option>
+                    <option value="珞巴族">珞巴族</option>
+                    <option value="基诺族">基诺族</option>
+                </select>
              </div>
   
              <div class="col-sm-3 ">
                 <h5><font color="#FF0033"> * </font>&nbsp证件号码</h5>
              </div>
               <div class="col-sm-3" >
-                <input  style="width: 200px; height:40px;background-color:#eef1f6 ;" type="text" value="1234567890" readonly/>
+                <input  style="width: 200px; height:40px;background-color:#eef1f6 ;" type="text" th:value="${session.PersonalLoginUser.getUserIdentifyID()}" readonly/>
                </div>
                <div class="col-sm-3">
                 政治面貌
@@ -557,7 +553,7 @@
       </button>
     </div>
 
-    <form action="" method="post"  onsubmit="return false">
+    <form action="" method="post" th:action="@{'/PersonalDeclare/AddEducation'}">
     <div class="modal-body">
      
         <!--以下是弹窗内容-->
@@ -777,7 +773,7 @@
     </div>
 
 
-    <form action="" method="post"  onsubmit="return false">
+    <form action="" method="post" th:action="@{'/PersonalDeclare/AddExperience'}">
     <div class="modal-body">
       
       
