--- a/src/main/resources/templates/company.html
+++ b/src/main/resources/templates/company.html
@@ -15,7 +15,13 @@
     <link rel="stylesheet" href="assets/vendor/fonts/material-design-iconic-font/css/materialdesignicons.min.css">
     <link rel="stylesheet" href="assets/vendor/charts/c3charts/c3.css">
     <link rel="stylesheet" href="assets/vendor/fonts/flag-icon-css/flag-icon.min.css">
-    <title></title>
+    <title>
+
+
+
+
+
+    </title>
 </head>
 
 <body>
