--- a/src/main/resources/templates/pingshen_input.html
+++ b/src/main/resources/templates/pingshen_input.html
@@ -193,11 +193,6 @@
             </div>
 
 
-
-
-
-
-
           
            </div>
 
@@ -222,10 +217,6 @@
                 <option value="值">正高级</option>
                 </select>
          </div>
-
-
-
-
 
          <div class="col-sm-6">
             <h5><font color="#FF0033"> * </font>&nbsp单位级别</h5>
@@ -487,15 +478,6 @@
     
       <h4><font color="#1a56a8"> <strong>见习期工作小结</strong></font></h4>
       <h4> &nbsp&nbsp&nbsp&nbsp&nbsp</h4>
-      
-    
-    
-    
-     
-    
-    
-    
-    
     
     </div>
     <div class="row">
@@ -517,11 +499,6 @@
       </div>
 
 
-
-
-
-
-
   
   <!--以下是学历信息-->
   
@@ -538,8 +515,6 @@
    data-toggle="modal" data-target="#exampleModalLong" >
   ＋新增学历
   </button>
-
-
 
   
   <!-- Modal -->
@@ -682,12 +657,6 @@
 
 
 
-
-
-
-
-
-
   </div>
   <div class="row">
     
@@ -720,15 +689,7 @@
             
          </div>
        
-        
-          
-           
-  
-  
-           
-  
-  
-             
+
   
       </div>
     </div>
@@ -740,11 +701,7 @@
   <!--以上是学历信息-->
   
   
-  
-  
-  
-  
-  
+
   
   <!--以下是工作情况-->
   
@@ -754,7 +711,6 @@
   
     <h4><font color="#1a56a8"> <strong>主要工作经历及成绩</strong></font></h4>
     <h4> &nbsp&nbsp&nbsp&nbsp&nbsp</h4>
-    
   
   <!-- Button trigger modal -->
   <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModalLong2">
@@ -806,7 +762,6 @@
        <input style="width: 400px; height:40px" type="text"></div>
 
 
-
        <div class="row">
         <h5><font color="#FF0033"> * </font>&nbsp任何职</h5>
        </div>
@@ -828,9 +783,6 @@
           </div>
 <!--以上是弹窗内容-->
 
-
-
-
     </div>
 
 
@@ -839,15 +791,9 @@
   </div>
   </div>
   </div>
-  
-  
-   
-  
-  
-  
-  
-  
+
   </div>
+      <!--以下是工作情况-->
   <div class="row">
     
     <div class="col-sm-12 ">
@@ -855,7 +801,6 @@
       <div class="row">
         <div class="col-sm-3 ">
             <h5>时间</h5>
-            
          </div>
          
          <div class="col-sm-3 ">
@@ -868,18 +813,6 @@
          </div>
          <div class="col-sm-3 ">
             <h5>取得成绩</h5>
-            
-         
-        
-          
-           
-  
-  
-           
-  
-  
-             
-  
       </div>
     </div>
   </div>
@@ -898,20 +831,9 @@
     
       <h4><font color="#1a56a8"> <strong>论文著作</strong></font></h4>
       <h4> &nbsp&nbsp&nbsp&nbsp&nbsp</h4>
-      
-    
-    
-    
-     
-    
-    
-    
-    
-    
+
     </div>
     <div class="row">
-      
-        
             <div class="col-sm-2" >
                 序号
              </div> <div class="col-sm-2">
@@ -952,14 +874,8 @@
     </div>
     </div>
     </div>
-    
     <!--以上是以下是else固定信息-->
-  
-  
-  
 
-  
-  
     <script type="text/javascript">
 
 
@@ -982,26 +898,6 @@
           });
       
       });
-      
-      
       </script>
-      
-
-
-
-
-
-
-      
-      
-
-
-
-
-
-      
-      
-
-  
   </body>
 </html>
