--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -145,7 +145,7 @@
               曾用名
              </div>
               <div class="col-sm-3" style="background-color: #FFFFFF;">
-                  <label th:text="'本人已承诺：'+${session.PersonalLoginUser.getUserName()}"></label>
+                  <label th:text="${session.PersonalLoginUser.getUserName()}"></label>
                </div>
                <div class="col-sm-3">
                 填表时间
@@ -171,7 +171,7 @@
                   证件号码
                  </div>
                   <div class="col-sm-3" style="background-color: #FFFFFF;">
-                      <label th:text="'本人已承诺：'+${session.PersonalLoginUser.getUserIdentifyID()}"></label>
+                      <label th:text="+${session.PersonalLoginUser.getUserIdentifyID()}"></label>
                    </div>
                    <div class="col-sm-3">
                     出生年月
