--- a/src/main/resources/templates/pingshen_input.html
+++ b/src/main/resources/templates/pingshen_input.html
@@ -498,7 +498,7 @@ function check()
     
     <!--以上是工作小结-->
     <div style="text-align:center">
-    <button type="submit" class="btn btn-danger" style="text-align: center" onclick="tanchuang()">提交</button>  
+    <input  type="submit" class="btn btn-danger" style="text-align: center" >提交</input>
     </div>
     </form>
 
