--- a/src/main/resources/templates/shenbaozhicheng.html
+++ b/src/main/resources/templates/shenbaozhicheng.html
@@ -49,15 +49,15 @@
                
          
        </div>
-         <div id="navbar" class="collapse-default navbar-collapse" >
-            <ul class="nav navbar-nav" > 
-              <li  ><a href="#">首页</a></li>
-              <li  ><a href="#">个人资料</a></li>
-              <li  ><a href="#">申报职称</a></li>
-              <li class="active"><a href="#">职称评审</a></li>
-              <li  ><a href="./zhichengrending.html">职称认定</a></li>
-              <li><a href="#">帮助中心</a></li>
-            </ul>
+          <div id="navbar" class="collapse-default navbar-collapse" >
+              <ul class="nav navbar-nav" >
+                  <li  ><a th="#">首页</a></li>
+                  <li  ><a th:href="@{'/PersonalUserInfo/toPersonalInfo'}">个人资料</a></li>
+                  <li  ><a th:href="@{'/PersonalDeclare/Main'}">申报职称</a></li>
+                  <li class="active"><a th:href="@{'/PersonalDeclare/Declare'}">职称评审</a></li>
+                  <li  ><a th:href="@{'/PersonalJudge/Judge'}">职称认定</a></li>
+                  <li><a href="#">帮助中心</a></li>
+              </ul>
           </div>
       </nav>
     <!--1.以上是导航栏-->
